* Class constructors should return the "initialize" method's return value. Closes #11481 [cch1]

* Class#addMethods reworked to include late mixin binding, augmented constructor toString,
  correct IE toString/valueOf assignments, and separated complex logic into Class#addMethod. [kangax, Tobie Langel]

* Ensure event.target is extended in IE. [jddalton]

* Fix Array#inersect not returning correct result if intersected value is 0. [jddalton]

* Make Form.Element.getValue/setValue return null for unknown/unsupported elements. Closes #8381 [jddalton, tdd]

* Optimize by using "_each" instead of "each" where applicable. Closes #9092 [sylvainzimmer]

* Preserve inline display style when using Element#show and Element#hide. Closes #3868 [anonymous, Tobie Langel]

* Ensure Element#hide and Element#show return element. [jddalton]

* Fix IE issue where Element#readAttribute() would return the form's child element if the element had the same id/name as the attribute. Closes #11092. [jddalton]

* Fix Event#element accessing inexistent tagName property (e.g. when element is a document). [kangax]

* Make Object.isNumber(new Number(n)) and Object.isString(new String(s)) return true. Closes #10595. [foca, kangax]

* Stop Form.Element.Methods.disable() from bluring focused element. Closes #11214. [kangax, sjoekie]

* Fix IE issue with Element#replace() removing the childNodes of the returned element. Closes #11225. [Rukawa, jddalton]

* Fix IE issue where Element#update(), Element#insert(), or Element#replace would turn relative href's into absolute. Closes #11350. [elvanor, jddalton, kangax]

* Make String#escapeHTML escape double quotes. Closes #10622. [kangax]

* Performance improvement for IE in Element#_getContentFromAnonymouseElement. Closes #11468. [jddalton]

* Fix IE issue with creating a new button element and setting it's "type" attribute. Closes #10548. [jddalton, sakarit]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [hagen.seifert, jddalton]
