@@ -66,10 +66,6 @@ Object.extend(Array.prototype, {
     return (inline !== false ? this : this.toArray())._reverse();
   },
   
-  reduce: function() {
-    return this.length > 1 ? this : this[0];
-  },
-  
   uniq: function(sorted) {
     return this.inject([], function(array, value, index) {
       if (0 == index || (sorted ? array.last() != value : !array.include(value)))
